--- a/EDStatusFeeder.csproj
+++ b/EDStatusFeeder.csproj
@@ -3,9 +3,9 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net472</TargetFramework>
-    <RootNamespace>EDStatus_Feeder</RootNamespace>
+    <RootNamespace>EDStatusFeeder</RootNamespace>
     <UseWindowsForms>true</UseWindowsForms>
-    <StartupObject>EDStatus_Feeder.Program</StartupObject>
+    <StartupObject>EDStatusFeeder.Program</StartupObject>
     <Version>0.2.0</Version>
     <FileVersion>0.0.2.0</FileVersion>
     <AssemblyVersion>0.0.2.0</AssemblyVersion>
